--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                     </svg>
                                 </div>
                                 <div class="advantages__title">972 +</div>
-                                <div class="advantages__text"><span>Consumer Products</span></div>
+                                <div class="advantages__text">Consumer Products</div>
                             </div>
                         </div>
                         <div class="advantages__column">
